# FastMat

./: Buffer.cpp  Buffer.h  CMakeCache.txt  CMakeLists.txt  DebugUtils.h  Dirichlet.cpp  Dirichlet.h  Distribution.cpp  Distribution.h  FastMat.h  Global.cpp  Global.h  IWishart.cpp  IWishart.h  Makefile  Matrix.cpp  Matrix.h  Normal.cpp  Normal.h  Readme.md  Stut.cpp  Stut.h  Tests.cpp  ThreadPool.cpp  ThreadPool.h  Vector.cpp  Vector.h  Wishart.cpp  Wishart.h  cmake_install.cmake  halid.natvis  util.cpp  util.h
FastMat/: Distributions.h  FastMat.sln  FastMat.vcxproj  FastMat.vcxproj.filters  ReadMe.txt  Readme.md
